--- a/src/App.css
+++ b/src/App.css
@@ -2,30 +2,60 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header-1 {
+  margin-top: 3em;
+  margin-bottom: 1em;
+}
+
+.navbar-brand >img {
+  float:left;
+  height:50px;
+  width:50px;
+}
+
+.quote-area {
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  background-color: rgb(235, 235, 235);
+  height: 20em;
+  width: 50em;
+}
+
+.quote-area > .auth{
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 3em;
+  font-size: 1.2em;
+  margin-top: 1em;
+  font-style: italic;
+}
+
+.quote-area > .qte {
+  font-style: italic;
+  font-size: 1.8em;
+  margin-left: 1em;
+  margin-right: 1em;
+}
+
+.quote-change{
+  margin-top: 1em;
+  background-color: grey;
+}
+
+.description{
+  font-size: 1.8em;
+  margin-left: 4em;
+  margin-right: 4em;
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
