--- a/src/assets/stylesheet/calculator.css
+++ b/src/assets/stylesheet/calculator.css
@@ -3,14 +3,16 @@
     align-self: center;
 }
 .box-container{
+    background-color: rgb(236, 236, 236);
     border: 2px solid black;
-    border-radius: 10%;
+    border-radius: 12%;
     width: 25em;
     height: 30em;
     display:flex;
     flex-direction: column;
 }
 .ans-screen{
+    background-color: white;
     align-self: center;
     width: 20em;
     height: 7em;
@@ -25,6 +27,7 @@
 
 }
 .button-area{
+    background-color: rgb(214, 214, 214);
     align-self: center;
     width: 20em;
     height: 19em;
@@ -42,6 +45,7 @@
     flex-direction: column;
 }
 .numkey-row > button{
+    background-color: white;
     font-weight: bold;
     margin: 0.2em;
     width: 4em;
@@ -57,4 +61,5 @@
 }
 .numkey-row > .button0 {
     width: 8.4em;
+    color:red;
 }
