--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,11 @@
   text-align: center;
 }
 
-
+.big-title{
+  margin: 1em;
+  font-weight: bold;
+  font-size: 50px;
+}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
